pictures, header, nav

--- a/index.html
+++ b/index.html
@@ -15,13 +15,52 @@
 
 <body>
 
+    <div class="container">
+    <!-- HEADER SECTION -->
     <header>
 
         <nav class="navbar">
-            
-        </nav>
+            <div class="logo"><a href="home.html"><img src="/img/logo.png" width="120" height="50"></a></div>
+        
+
+        <button class="navbar-toggle-btn">
+            <span class="one"></span>
+            <span class="two"></span>
+            <span class="three"></span>
+        </button>
+
+        <ul class="navbar-nav">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#">Research</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+
+        <button class="btn-primary">Button</button>
+    </nav>
 
     </header>
+
+    <!-- HOME SECTION -->
+    <main>
+        <section class="home" id="home">
+
+        <div class="home-img-box">
+            <img src="./img/researcher.png" alt="Research banner" class="home-img" width="25%">
+        </div>
+
+        <div class="wrapper">
+            <h1 class="home-title">Research Website Text </h1>
+
+            <p class="home-text"> 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ipsam dicta, accusantium recusandae quia nisi perspiciatis molestias nobis perferendis laudantium, minus, nesciunt non! Culpa quas quae vitae ratione. Molestiae, sint.
+            </p>
+
+            <button class="btn-primary">View Research</button>
+        </div>
+
+        </section>
+    </main>
+</div>
 
 </body>
 </html>
