--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
 
         <nav class="navbar">
-            <div class="logo"><a href="home.html"><img src="./img/banner/logo.png" width="120" height="50"></a></div>
+            <div class="logo"><a href="home.html"><img src="/img/banner/logo.png" width="120" height="50"></a></div>
         
 
         <button class="navbar-toggle-btn">
@@ -34,7 +34,7 @@
             <li><a href="#">Research</a></li>
             <li><a href="#">About Us</a></li>
         </ul>
-        <div class="logo2"><a href="home.html"><img src="./img/banner/Logo-SAR.png" width="120" height="50"></a></div>
+        <div class="logo2"><a href="home.html"><img src="/img/banner/Logo-SAR.png" width="120" height="50"></a></div>
     </nav>
 
     </header>
