--- a/index.html
+++ b/index.html
@@ -18,25 +18,24 @@
     <div class="container">
     <!-- HEADER SECTION -->
     <header>
-
         <nav class="navbar">
-            <div class="logo"><a href="home.html"><img src="img/banner/logo.png" width="120" height="50"></a></div>
-        
+            <div class="logo">
+                <a class="logo-name" href="home.html">Wajdi Aljedaani</a>
+            </div>
 
-        <button class="navbar-toggle-btn">
-            <span class="one"></span>
-            <span class="two"></span>
-            <span class="three"></span>
-        </button>
-
-        <ul class="navbar-nav">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#">Research</a></li>
-            <li><a href="#">About Us</a></li>
-        </ul>
-        <div class="logo2"><a href="home.html"><img src="img/banner/Logo-SAR.png" width="120" height="50"></a></div>
-    </nav>
-
+            <button class="navbar-toggle-btn">
+                <span class="one"></span>
+                <span class="two"></span>
+                <span class="three"></span>
+            </button>
+            <ul class="navbar-nav">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Research</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+            <div class="logo2"><a href="home.html"><img src="img/banner/Logo-SAR.png" style="display: none;"  width="120" height="50"></a></div>
+        </nav>
     </header>
 
     <!-- BANNER SECTION -->
