--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
                 <div class="grid-container">
                     <div class="menu" >
                         <img id="profile-img" src="Sample-Images/man-smiling.jpeg" alt="">
-                        <p class="intro-name" href="">Jack Harlow</p>
+                        <p class="intro-name" href="">Wajdi Aljedaani</p>
                         <ul class="info-text">
                             <li><p class="intro-work" href="">Software Engineering Researcher</p></li>
                             <li><p class="intro-work" href="">Rochester Institute of Technology</p></li>
@@ -110,7 +110,7 @@
                     <div class="e-box" id="e-box1">
                         <div class="year"> <i class="fas fa-calendar"></i> 2019 - 2020 </div>
                         <h3 class="role-name">Web Development -  Blah Company</h3>
-                        <h3 class="role-location">Dallas Texas</h3>
+                        <h3 class="role-location">Dallas, TX</h3>
                         <p class="role-text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laboriosam amet facilis voluptates tempora nulla, adipisci vitae minus nobis eos impedit facere aliquam quod tenetur magni cumque placeat illum et.</p>
                         <ul class="role-skills">
                             <li><p>Skill 1</p></li>
@@ -122,9 +122,9 @@
                 </div>
                 <div class="experience-box" id="experience-box1">
                     <div class="e-box" id="e-box1">
-                        <div class="year"> <i class="fas fa-calendar"></i> 2019 - 2020 </div>
+                        <div class="year"> <i class="fas fa-calendar"></i> 2020 - 2021 </div>
                         <h3 class="role-name">Web Development -  Blah Company</h3>
-                        <h3 class="role-location">Dallas Texas</h3>
+                        <h3 class="role-location">Dallas, TX</h3>
                         <p class="role-text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laboriosam amet facilis voluptates tempora nulla, adipisci vitae minus nobis eos impedit facere aliquam quod tenetur magni cumque placeat illum et.</p>
                         <ul class="role-skills">
                             <li><p>Skill 1</p></li>
@@ -136,9 +136,9 @@
                 </div>
                 <div class="experience-box" id="experience-box1">
                     <div class="e-box" id="e-box1">
-                        <div class="year"> <i class="fas fa-calendar"></i> 2019 - 2020 </div>
+                        <div class="year"> <i class="fas fa-calendar"></i> 2021 - 2022 </div>
                         <h3 class="role-name">Web Development -  Blah Company</h3>
-                        <h3 class="role-location">Dallas Texas</h3>
+                        <h3 class="role-location">Dallas, TX</h3>
                         <p class="role-text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laboriosam amet facilis voluptates tempora nulla, adipisci vitae minus nobis eos impedit facere aliquam quod tenetur magni cumque placeat illum et.</p>
                         <ul class="role-skills">
                             <li><p>Skill 1</p></li>
@@ -158,7 +158,7 @@
                         <div class="e-box" id="e-box2">
                             <div class="year"> <i class="fas fa-calendar"></i> 2019 - 2020 </div>
                             <h3 class="role-name">Web Development -  Blah Company</h3>
-                            <h3 class="role-location">Dallas Texas</h3>
+                            <h3 class="role-location">Dallas, TX</h3>
                             <p class="role-text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laboriosam amet facilis voluptates tempora nulla, adipisci vitae minus nobis eos impedit facere aliquam quod tenetur magni cumque placeat illum et.</p>
                             <ul class="role-skills">
                                 <li><p>Skill 1</p></li>
@@ -170,9 +170,9 @@
                     </div>
                     <div class="experience-box" id="experience-box2">
                         <div class="e-box" id="e-box2">
-                            <div class="year"> <i class="fas fa-calendar"></i> 2019 - 2020 </div>
+                            <div class="year"> <i class="fas fa-calendar"></i> 2020 - 2021 </div>
                             <h3 class="role-name">Web Development -  Blah Company</h3>
-                            <h3 class="role-location">Dallas Texas</h3>
+                            <h3 class="role-location">Dallas, TX</h3>
                             <p class="role-text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laboriosam amet facilis voluptates tempora nulla, adipisci vitae minus nobis eos impedit facere aliquam quod tenetur magni cumque placeat illum et.</p>
                             <ul class="role-skills">
                                 <li><p>Skill 1</p></li>
@@ -184,9 +184,9 @@
                     </div>
                     <div class="experience-box" id="experience-box2">
                         <div class="e-box" id="e-box2">
-                            <div class="year"> <i class="fas fa-calendar"></i> 2019 - 2020 </div>
+                            <div class="year"> <i class="fas fa-calendar"></i> 2021 - 2022 </div>
                             <h3 class="role-name">Web Development -  Blah Company</h3>
-                            <h3 class="role-location">Dallas Texas</h3>
+                            <h3 class="role-location">Dallas, TX</h3>
                             <p class="role-text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laboriosam amet facilis voluptates tempora nulla, adipisci vitae minus nobis eos impedit facere aliquam quod tenetur magni cumque placeat illum et.</p>
                             <ul class="role-skills">
                                 <li><p>Skill 1</p></li>
@@ -194,6 +194,68 @@
                                 <li><p>Skill 3</p></li>
                                 <li><p>Skill 4</p></li>
                             </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+    <section class="accomplishments-info">
+        <h1 id="accomplishments-heading" class="accomplishments-heading">Accomplishments</h1>
+        <div class="accomplishments-row" id="a-row">
+            <div class="accomplishments-column" id="a-column">
+                <div class="accomplishments-box" id="accomplishments-box1">
+                    <div class="a-box" id="a-box1">
+                        <h3 class="accomplishments-title"><i class="fa fa-trophy" aria-hidden="true"></i> Best Paper Award</h3>
+                        <h3 class="accomplishments-event">Blah Conference for Blah Competition - May 2019</h3>
+                        <p class="accomplishments-reason" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laboriosam amet facilis voluptates tempora nulla, adipisci vitae minus nobis eos impedit facere aliquam quod tenetur magni cumque placeat illum et.</p>
+                        <a class="accomplishments-doc" href=""><i class="fa fa-certificate fa-spin" aria-hidden="true"></i> View Certificate/Award</a>
+                    </div>
+                </div>
+                <div class="accomplishments-box" id="accomplishments-box1">
+                    <div class="a-box" id="a-box1">
+                        <h3 class="accomplishments-title"><i class="fa fa-trophy" aria-hidden="true"></i> Best Paper Award</h3>
+                        <h3 class="accomplishments-event">Blah Conference for Blah Competition - May 2020</h3>
+                        <p class="accomplishments-reason" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laboriosam amet facilis voluptates tempora nulla, adipisci vitae minus nobis eos impedit facere aliquam quod tenetur magni cumque placeat illum et.</p>
+                        <a class="accomplishments-doc" href=""><i class="fa fa-certificate fa-spin" aria-hidden="true"></i> View Certificate/Award</a>
+                    </div>
+                </div>
+                <div class="accomplishments-box" id="accomplishments-box1">
+                    <div class="a-box" id="a-box1">
+                        <h3 class="accomplishments-title"><i class="fa fa-trophy" aria-hidden="true"></i> Best Paper Award</h3>
+                        <h3 class="accomplishments-event">Blah Conference for Blah Competition - May 2021</h3>
+                        <p class="accomplishments-reason" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laboriosam amet facilis voluptates tempora nulla, adipisci vitae minus nobis eos impedit facere aliquam quod tenetur magni cumque placeat illum et.</p>
+                        <a class="accomplishments-doc" href=""><i class="fa fa-certificate fa-spin" aria-hidden="true"></i> View Certificate/Award</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="second-accomplishments-info">
+            <div class="accomplishments-row" id="a-row2">
+                <h1 id="accomplishments-heading2" class="accomplishments-heading">Accomplishments</h1>
+                <div class="accomplishments-column" id="a-column2">
+                    <div class="accomplishments-box" id="accomplishments-box2">
+                        <div class="a-box" id="a-box2">
+                            <h3 class="accomplishments-title"><i class="fa fa-trophy" aria-hidden="true"></i> Best Paper Award</h3>
+                            <h3 class="accomplishments-event">Blah Conference for Blah Competition - May 2019</h3>
+                            <p class="accomplishments-reason" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laboriosam amet facilis voluptates tempora nulla, adipisci vitae minus nobis eos impedit facere aliquam quod tenetur magni cumque placeat illum et.</p>
+                            <a class="accomplishments-doc" href=""><i class="fa fa-certificate fa-spin" aria-hidden="true"></i> View Certificate/Award</a>
+                        </div>
+                    </div>
+                    <div class="accomplishments-box" id="accomplishments-box2">
+                        <div class="a-box" id="a-box2">
+                            <h3 class="accomplishments-title"><i class="fa fa-trophy" aria-hidden="true"></i> Best Paper Award</h3>
+                            <h3 class="accomplishments-event">Blah Conference for Blah Competition - May 2020</h3>
+                            <p class="accomplishments-reason" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laboriosam amet facilis voluptates tempora nulla, adipisci vitae minus nobis eos impedit facere aliquam quod tenetur magni cumque placeat illum et.</p>
+                            <a class="accomplishments-doc" href=""><i class="fa fa-certificate fa-spin" aria-hidden="true"></i> View Certificate/Award</a>
+                        </div>
+                    </div>
+                    <div class="accomplishments-box" id="accomplishments-box2">
+                        <div class="a-box" id="a-box2">
+                            <h3 class="accomplishments-title"><i class="fa fa-trophy" aria-hidden="true"></i> Best Paper Award</h3>
+                            <h3 class="accomplishments-event">Blah Conference for Blah Competition - May 2021</h3>
+                            <p class="accomplishments-reason" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut laboriosam amet facilis voluptates tempora nulla, adipisci vitae minus nobis eos impedit facere aliquam quod tenetur magni cumque placeat illum et.</p>
+                            <a class="accomplishments-doc" href=""><i class="fa fa-certificate fa-spin" aria-hidden="true"></i> View Certificate/Award</a>
                         </div>
                     </div>
                 </div>
